# agentic-hand-control

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  camera.py  main.py  pyproject.toml  render.yaml  requirements-demo.txt
static/: index.html
