[project]
name = "agentic-hand-control"
version = "0.1.0"
description = "LLM agent that controls an Arduino robotic hand via natural language"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "openai-agents>=0.0.11",
    "openai>=1.57",
    "pyserial>=3.5",
    "python-dotenv>=1.0",
    "opencv-python>=4.10",
    "mediapipe>=0.10",
]

[project.scripts]
hand-control = "main:start"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["main", "camera"]
